# parallel-testing-with-robot-framework

./: README.md  log.html  output.xml  pyproject.toml  report.html  requirements.txt
Resources/PageObject/Common/: ExceptionHandler.robot  LambdaTestStatus.py
Resources/PageObject/KeyDefs/: Common.robot  SeleniumDrivers.robot
Resources/PageObject/Locators/: Locators.py
Tests/: test_sel_playground.robot  test_todo_app.robot
Tests/CloudGrid/: test_sel_playground.robot  test_todo_app.robot
Tests/LocalGrid/: test_sel_playground.robot  test_todo_app.robot
pabot_results/0/: output.xml  robot_stdout.out
pabot_results/1/: output.xml  robot_stderr.out  robot_stdout.out
