[tool.poetry]
name = "robot-parallel-tests"
version = "0.1.0"
description = ""
authors = ["Himanshu Jagdish Sheth <himanshu.sheth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.9.0"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
robotframework = "^6.0.2"
robotframework-seleniumlibrary = "^6.0.0"
robotframework-pabot = "2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
